# arachnophobic

./: .gitignore  Cargo.toml  TODO
doc/: menu_mockups.xopp
src/: assets.rs  collision.rs  components.rs  enemy.rs  health.rs  main.rs  menu.rs  player.rs  projectile.rs  state.rs  util.rs
src/enemy/: factory.rs  mod.rs  types.rs
src/stage/: mod.rs  orchestration.rs  waves.rs
