[package]
name = "arachnophobic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_asset_loader = {version = "0.10.0", features = ["2d"]}
iyes_loopless = "*"
heron = {version = "3.0.0", features = ["2d"]}
rand = "0.8"